# gitlab_stats

./: .coverage  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .yamlfmt  CHANGELOG.md  LICENSE  README.md  codecov.yml  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  main.yml
doc/: changelog_prompts.txt  gitlab_contributions_placeholder.txt  pylint_report.txt
gitlab_stats/: config.py  dashboard.py  gitlab_stats_api_ingester.py  gitlab_stats_parser.py  jira_api_ingester.py  settings.py  timeline_utils.py
gitlab_stats/dashboard_utils/: activity_rules.py  charts.py  helpers.py  metrics_schema.py  sections.py  timeline_utils.py
gitlab_stats/database/: supabase_client.py  supabase_sync.py
test/: test_charts.py  test_dashboard.py  test_gitlab_stats.py  test_gitlab_stats_api_ingester.py  test_helpers.py  test_jira_api_ingester.py  test_sections.py  test_settings.py  test_supabase_client.py  test_supabase_sync.py  test_timeline_utils.py
tools/: after_checkout.bat  install_poetry.bat  pylint_reporter.py
